--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
     "description": "Detect deepfakes in videos and images.",
     "action": {
-      "default_popup": "popup.html"
+      "default_popup": "deepfake/index.html"
     //   "default_icon": {
     //     "16": "icons/icon16.png",
     //     "48": "icons/icon48.png",
@@ -23,7 +23,8 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["content.js"]
+        "js": ["content.js"],
+        "css":["content.css"]
       }
     ],
     "host_permissions": [
